traces/bug_633.txt
examples++-mpi/real_SuperLU_DIST_FreeFem.cpp:813: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-mpi/real_SuperLU_DIST_FreeFem.cpp:813:1: initialization of callDoLoadInit
811.   }
812.   
813. > LOADFUNC(Load_Init)

examples++-mpi/real_SuperLU_DIST_FreeFem.cpp:813:1: call to DoLoadInit
811.   }
812.   
813. > LOADFUNC(Load_Init)

examples++-mpi/real_SuperLU_DIST_FreeFem.cpp:813:1: call to addInitFunct
  811.   }
  812.   
  813. > LOADFUNC(Load_Init)

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
